更新工具标题

--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
+# Dashboard 页面标题中的名称，显示为「notion-auto （NOTION_AUTO_NAME）控制台」；不设则为「notion-auto 控制台」
+# NOTION_AUTO_NAME = 我的电脑
+
 NOTION_SMTP_HOST = smtp.gmail.com
 NOTION_SMTP_PORT = 587
 NOTION_SMTP_USER = mark@fridgechannels.com
