--- a/env.example
+++ b/env.example
@@ -1,8 +1,34 @@
 # Dashboard 页面标题中的名称，显示为「notion-auto （NOTION_AUTO_NAME）控制台」；不设则为「notion-auto 控制台」
 # NOTION_AUTO_NAME = 我的电脑
 
+# 设为 1 时，Dashboard 启动的子进程（Playwright / Queue Sender）日志会同时输出到运行 dashboard 的终端，便于排查
+# NOTION_AUTO_VERBOSE = 1
+
+# Queue Sender：Notion Integration Token，需将 Integration 加入 Queue 库与发件人库的 Collaborators
+# NOTION_API_KEY = secret_xxx
+
+# Queue Sender 发信用 Gmail OAuth2：一套客户端凭据，所有发件人共用；每个发件人各自在发件人库的 password 列存自己的 refresh_token。见 README「Gmail OAuth2 凭据」
+# 获取 refresh_token：须使用「Web 应用」类型 OAuth 客户端并添加重定向 URI http://127.0.0.1:9010/callback，再运行 npx tsx scripts/gmail-oauth-refresh-token.ts
+# GMAIL_CLIENT_ID = xxx.apps.googleusercontent.com
+# GMAIL_CLIENT_SECRET = xxx
+
+# Planned Send At 无时区时使用的时区（如 +08:00 表示北京时间）；仅当 Notion 返回的 date 无 Z/+08:00 等后缀时生效
+# PLANNED_SEND_AT_TZ = +08:00
+
+# Queue 收件人列名：默认 "Email"。若 Notion 中有多列邮箱（如 "Email" 与 "Email (1)"），可设为实际收件人列名
+# NOTION_QUEUE_RECIPIENT_PROPERTY = Email
+
+# Queue Sender 节流（按发送者独立）：两封间隔随机 min～max 毫秒、每小时/每天每发送者上限。未配置时用默认值
+# QUEUE_THROTTLE_MIN_INTERVAL_MS = 180000
+# QUEUE_THROTTLE_MAX_INTERVAL_MS = 300000
+# QUEUE_THROTTLE_MAX_PER_HOUR = 10
+# QUEUE_THROTTLE_MAX_PER_DAY = 50
+
+# 测试脚本用：发件人库 URL（scripts/inspect-sender-accounts.ts）
+# NOTION_SENDER_ACCOUNTS_DATABASE_URL = https://www.notion.so/xxx
+
 NOTION_SMTP_HOST = smtp.gmail.com
 NOTION_SMTP_PORT = 587
-NOTION_SMTP_USER = mark@fridgechannels.com
-NOTION_SMTP_PASS = Bai188452..
-NOTION_ALERT_TO = oh.duang@gmail.com
+NOTION_SMTP_USER = send@email
+NOTION_SMTP_PASS = My_Password
+NOTION_ALERT_TO = inbox@email
