--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "tsx": "^4.19.2"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
     "dotenv": "^17.2.4",
+    "googleapis": "^144.0.0",
     "nodemailer": "^6.9.16",
-    "playwright": "^1.49.0"
+    "playwright": "^1.49.0",
+    "tree-kill": "^1.2.2"
   }
 }
