Enhance Inbound Listener functionality: Add configuration options for the Inbound Listener in the dashboard, enabling email polling from Gmail and integration with Notion. Update README and example files to reflect new permissions and setup instructions. Introduce new API endpoints for managing Inbound Listener settings and status, and implement logic for handling inbound messages and replies within the same thread.

--- a/env.example
+++ b/env.example
@@ -9,6 +9,7 @@
 
 # Queue Sender 发信用 Gmail OAuth2：一套客户端凭据，所有发件人共用；每个发件人各自在发件人库的 password 列存自己的 refresh_token。见 README「Gmail OAuth2 凭据」
 # 获取 refresh_token：须使用「Web 应用」类型 OAuth 客户端并添加重定向 URI http://127.0.0.1:9010/callback，再运行 npx tsx scripts/gmail-oauth-refresh-token.ts
+# Inbound Listener 需要读邮件（gmail.readonly）：若已用仅 gmail.send 授权过，须在 OAuth 同意屏勾选「查看邮件」并重新跑授权脚本获取新 refresh_token，再更新发件人库 password 列。
 # GMAIL_CLIENT_ID = xxx.apps.googleusercontent.com
 # GMAIL_CLIENT_SECRET = xxx
 
