Refactor Queue Sender and Inbound Listener configurations: Migrate Queue Sender throttling settings to the dashboard for easier management. Update inbound listener JSON to remove hardcoded mailboxes. Introduce new methods for restarting the inbound listener and enhance email body processing with HTML conversion. Update schedule interface to include queue throttling parameters and improve validation logic. Enhance dashboard HTML to support new queue throttling settings.

--- a/env.example
+++ b/env.example
@@ -19,7 +19,7 @@
 # Queue 收件人列名：默认 "Email"。若 Notion 中有多列邮箱（如 "Email" 与 "Email (1)"），可设为实际收件人列名
 # NOTION_QUEUE_RECIPIENT_PROPERTY = Email
 
-# Queue Sender 节流（按发送者独立）：两封间隔随机 min～max 毫秒、每小时/每天每发送者上限。未配置时用默认值
+# Queue Sender 节流已迁移至 Dashboard「全局设置」中编辑（单位秒）；以下 env 仅作覆盖用，一般不设
 # QUEUE_THROTTLE_MIN_INTERVAL_MS = 180000
 # QUEUE_THROTTLE_MAX_INTERVAL_MS = 300000
 # QUEUE_THROTTLE_MAX_PER_HOUR = 10
